--- a/aula02.html
+++ b/aula02.html
@@ -9,16 +9,32 @@
     
     <script>
         //Alert
+        alert("Veremos a seguir função alert");
         window.alert("O alert também funciona sem o prefixo window.");
         alert("Desse jeito");
 
         var palavra1 = "Concatenação", palavra2 = "também", palavra3 = "funciona";
 
         alert(palavra1 + " " + palavra2 + " " + palavra3);
-        alert("adição e outras operações também");
-        alert("10 + 5 = " + (10 + 5));
-        alert("As regras aqui parecem ser as mesmas do comando write()")
+        alert("Adição e outras operações também\n" + "10 + 5 = " + (10 + 5));
+        alert("As regras aqui parecem ser as mesmas da função write()");
+        alert("Agora veremos a função prompt");
 
+        //Prompt
+        var nome = prompt("Função prompt: \nDigite seu nome","nome");
+        alert("Agora veremos a função confirm");
+
+        //Confirm
+        var resposta = confirm("Olá " + nome + " deseja confirmar este nome?");
+        alert("A função confirm pode retornar true ou false\nRetorno da função: " + resposta);
+
+        // operador de comparação
+        while(resposta == false){
+            nome = prompt("Digite seu nome","nome");
+            resposta = confirm("Olá " + nome + " deseja confirmar este nome?");
+        }
+        document.write(nome+"<br>");
+        
     </script>
 </body>
 </html>
