--- a/aula03.html
+++ b/aula03.html
@@ -9,17 +9,7 @@
     <script>
         //estudo sobre Arrays
         //var cor=new Array();
-        var cor=[];
-
-        /*
-        cor.push("Preto");
-        cor.push("Branco");
-        cor.push("Vermelho");
-        cor.push("Azul");
-        cor.push("Amarelo");
-        cor.push("Marrom");
-        cor.push("Rosa");
-        */
+        var cor=[], ferramenta=[], teste=[], matriz=[], array=[];
 
         cor[0]="Preto";
         cor[1]="Branco";
@@ -28,6 +18,14 @@
         cor[4]="Amarelo";
         cor[5]="Marrom";
         cor[6]="Rosa";
+
+        ferramenta[0]="martelo";
+        ferramenta[1]="chave";
+        ferramenta[2]="alicate";
+        ferramenta[3]="pá";
+        ferramenta[4]="corda";
+        ferramenta[5]="furadeira";
+        ferramenta[6]="serra";
 
         // Metodos da classe array
 
@@ -46,7 +44,44 @@
         // splice: Metodo complexo de remoção de dados, remove x quantidades de dados a partir de uma posição y
         cor.shift(2, 1);
 
-        document.write(cor[8]);
+        //indexOf: procura um nome no array e caso exista retorna sua posição
+        document.write(cor.indexOf("Marrom")+"<br><br>");
+
+        //join: junta todos os dados de uma array em uma string, separando cada elemento com uma virgula
+        juntaArray = cor.join()
+        document.write(juntaArray+"<br><br>");
+
+        //sort: organisa a array em ordem crecente para numeros e em ordem alfabetica para letras
+        document.write(cor.sort()+"<br><br>");
+
+        //reverse: muda a ordem do array ao contrario
+        document.write(cor.reverse()+"<br><br>");
+
+        //concat: concatena duas arrays em uma só
+        teste = cor.concat(ferramenta);
+        for(loop = 0; loop < 13; loop++){
+            document.write(teste[loop]+",");
+        }
+
+        //length: retorna o tamanho da array
+        document.write("<br><br>" + teste.length + "<br>");
+
+        //matrizes são formadas inserindo arrays dentro de outra array
+        for(loop = 0; loop < 5; loop++){
+            matriz.push(array);
+        }
+        
+        for(loop = 0; loop < 5; loop++){
+            matriz[0][loop] = loop;
+        }
+
+        for(loop1 = 0; loop1 < 5; loop1++){
+            for(loop2 = 0; loop2 < 5; loop2++){
+                document.write(matriz[loop1][loop2]+" ");
+            }
+            document.write("<br>");
+        }
+
 
     </script>
 </body>
